Module 4-6 work: Lab 4 and Lab 5 demos, module 5 exercises